--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
-    "guard-for-in": "error"
+    "guard-for-in": "error",
+    "semi": "error"
   }
 }
