--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,7 @@
     "no-unused-vars": "warn",
     "react/jsx-no-bind": "warn",
     "react/no-find-dom-node": "off",
-    "react/prop-types": "off",
+    "react/prop-types": "warn",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-uses-react": "off",
