--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "axios": "^0.21.1",
     "http-proxy-middleware": "^1.3.0",
     "i18next": "^20.2.2",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.8.13",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
   },
